--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -22,6 +22,22 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:contentDescription="@string/event_image"/>
 
+        <!-- Favorite Button -->
+        <ImageButton
+            android:id="@+id/btnFavorite"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/rounded_shape"
+            android:contentDescription="@string/favorite"
+            android:src="@drawable/ic_favorite"
+            app:layout_constraintBottom_toTopOf="@id/tvEventName"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/imgMediaCover"
+            app:layout_constraintVertical_bias="1.0" />
+
         <!-- Event Name -->
         <TextView
             android:id="@+id/tvEventName"
@@ -30,7 +46,7 @@
             android:textSize="20sp"
             android:textStyle="bold"
             android:layout_marginBottom="8dp"
-            app:layout_constraintTop_toBottomOf="@id/imgMediaCover"
+            app:layout_constraintTop_toBottomOf="@id/btnFavorite"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:gravity="center"/>
@@ -60,7 +76,6 @@
             android:gravity="center"/>
 
         <!-- Remaining Quota -->
-
         <TextView
             android:id="@+id/tvRemainingQuota"
             android:layout_width="match_parent"
