--- a/app/src/main/res/layout/fragment_finished.xml
+++ b/app/src/main/res/layout/fragment_finished.xml
@@ -25,6 +25,20 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
 
+    <!-- Title -->
+    <TextView
+        android:id="@+id/tvFinishedEvent"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/title_finished"
+        android:fontFamily="sans-serif-medium"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/searchBar"
+        android:padding="16dp"
+        android:textSize="24sp"
+        android:textStyle="bold" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvEvent"
         android:layout_width="0dp"
@@ -33,7 +47,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/searchBar" />
+        app:layout_constraintTop_toBottomOf="@id/tvFinishedEvent" />
 
     <ProgressBar
         android:id="@+id/progressBar"
